sass/_index.scss
#index-content {
    #hero {
        background-image: url('/assets/pattern.svg');
        background-repeat: repeat;
        position: relative;

        .hero-wrapper {
            display: grid;
            grid-template-columns: 1fr 1fr;

            @media (max-width: 850px) {
                grid-template-columns: 1fr;
            }

            margin-inline: auto;

            .logo-wrapper {
                display: grid;
                flex: 1 300px;
                z-index: 200;
                place-items: center end;
                margin-block: 2rem;
                padding-inline-end: clamp(0px, 10vw, 40px);

                @media (max-width: 850px) {
                    place-items: center;
                    padding-inline: 1rem;
                }

                .logo-bg {
                    display: grid;
                    background-color: #000;
                    aspect-ratio: 1;
                    place-content: center;

                    max-width: 80%;
                }
            }

            .hero-text-wrapper {
                display: grid;
                z-index: 0;
                background-color: #000;
                padding-block: 2rem;
                padding-inline: clamp(0px, 10vw, 40px);
                place-content: center start;

                .hero-text {
                    max-width: 600px;

                    h2 {
                        margin-block-start: 0;
                        font-size: 2.5rem;
                        font-weight: 400;
                        color: #A3AAB4;
                        line-height: 1.2;
                    }

                    p {
                        color: #fff;
                    }

                    .cta-row {
                        justify-content: start;
                    }
                }
            }
        }
    }

    #main-appeal {
        .info {
            h2 {
                margin-block-start: 0;
            }

            p {
                font-size: 1.25rem;
            }

            p:last-of-type {
                margin-block-end: 1.5em;
            }

            .cta {
                display: inline-block;
            }
        }

        img {
            border-radius: 16px;
        }
    }

    #call-to-sponsor {
        background-color: #000;
        color: #fff;
        padding-block: 60px;

        .content {
            display: flex;
            flex-wrap: wrap;
            gap: 60px;

            .visual-call {
                display: grid;
                place-content: center;
                background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 75%),
                    url("/assets/frontpage/sponsor-circle.svg");
                font-size: 2.5rem;
                font-weight: 700;
                padding: 2.4em;
                text-align: center;
                margin: auto;

                width: 400px;
                height: 400px;
            }

            .info {
                flex: 1;
                place-content: center;

                p {
                    font-size: 1.25rem;
                }

                .cta {
                    max-width: fit-content;
                }
            }
        }
    }

    #what-to-expect {
        padding-block: 80px;

        .intro {
            max-width: 800px;
            margin-inline: auto;
            margin-block-end: 40px;

            @media screen and (min-width: 768px) {
                text-align: center;
            }

            h2 {
                font-size: 2.5rem;
                margin-block-end: 20px;
            }

            p {
                font-size: 1.25rem;
                line-height: 1.5;
            }
        }

        .benefits {
            display: flex;
            flex-wrap: wrap;
            gap: 24px;
            justify-content: center;

            .benefit-card {
                border: 1px solid #D2D2D2;
                border-radius: 16px;
                padding: 24px;
                width: 350px;

                h3 {
                    text-align: center;
                    font-size: 1.25rem;
                    margin: 0 0 16px 0;
                }

                p {
                    text-align: center;
                    line-height: 1.2;
                }
            }
        }
    }

    #programme {
        background-color: #F5F5F5;
        padding-block: 60px;

        .content {
            display: flex;
            flex-direction: column;
            gap: 30px;

            h2 {
                font-size: 2.5rem;
                text-align: center;
                margin: 0;
            }

            table {
                display: table;
                table-layout: fixed;
                border-spacing: 0;
                margin-inline: auto;
                max-width: fit-content;

                --border: 1px solid #D2D2D2;
                --border-radius: 16px;

                td {
                    background: #fff;
                    border: var(--border);
                    border-bottom: unset;
                    padding: .2em 1em;
                }

                td:first-of-type {
                    font-weight: 700;
                    border-right: unset;
                }

                tr:first-of-type {
                    td:first-of-type {
                        border-top-left-radius: var(--border-radius);
                    }

                    td:last-of-type {
                        border-top-right-radius: var(--border-radius);
                    }
                }

                tr:last-of-type {
                    td:first-of-type {
                        border-bottom-left-radius: var(--border-radius);
                        border-bottom: var(--border);
                    }

                    td:last-of-type {
                        border-bottom-right-radius: var(--border-radius);
                        border-bottom: var(--border);
                    }
                }
            }

            .cta {
                display: inline-block;
                margin-inline: auto;
            }
        }
    }
}

